# MoOS

./: .gitignore  Makefile  README.md  README_zh.md  augvex.txt  build_test.sh  clean_build.sh  doc.docx  frecov-64  hello.txt  logo.txt  note.ipynb  oscomp_syscalls.md  pipe_test.txt  readme.md  run_test.sh
os/kernel/: .gitignore  Cargo.toml  Makefile
os/kernel/cargo-judge/: config
os/kernel/dependencies/fat32/: LICENSE-MIT  README.md
os/kernel/dependencies/fat32/src/: bpb.rs  dir.rs  directory_item.rs  fat.rs  file.rs  lib.rs  tool.rs  volume.rs
os/kernel/dependencies/riscv/: .cargo-checksum.json
os/kernel/dependencies/virtio-drivers/: .cargo-checksum.json
os/kernel/dependencies/virtio-drivers/src/: blk.rs
os/kernel/src/: config.rs  console.rs  entry.asm  lang_items.rs  linker.ld  main.rs  sbi.rs  timer.rs  user_bin.S
os/kernel/src/boards/: qemu.rs
os/kernel/src/fs/: dirty.rs  file.rs  mod.rs  std.rs  util.rs  vfs.rs
os/kernel/src/fs/block_dev/: mod.rs  virtio_block.rs
os/kernel/src/fs/dev/: block_device.rs  mod.rs
os/kernel/src/fs/driver/: block_device.rs  mod.rs
os/kernel/src/mm/: address.rs  frame_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/kernel/src/signal/: sig.rs
os/kernel/src/stacktrace/: mod.rs
os/kernel/src/sync/: up.rs
os/kernel/src/syscall/: fs.rs  interrupt.rs  mm.rs  mod.rs  process.rs  raw_ptr.rs
os/kernel/src/task/: context.rs  cpu.rs  mod.rs  proc.rs  switch.S
os/kernel/src/trap/: context.rs  mod.rs  trampoline.S  userloop.rs
os/kernel/src/vfs/global/: global.rs
os/kernel/src/xdebug/: mod.rs  stack.rs
(+71 files in other folders)
