[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmas-elf = "0.9.0"
riscv = { path = "dependencies/riscv", features = ["inline-asm"] }
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
libc = { version = "0.2", optional = true }
hashbrown = "0.13.2"
async-task =  { path = "dependencies/async-task", default-features = false }
virtio-drivers = { path = "dependencies/virtio-drivers" }
block_device ="0.1"
fat32 = { path = "dependencies/fat32" }
spin = {path = "dependencies/spin" }
# virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4993381" }
embedded-sdmmc = "0.5.0"

[dev-dependencies]
tempfile = "3.2"
